# tyler

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: check.yml
src/: cli.rs  io.rs  main.rs
src/math/: image.rs  misc.rs  mod.rs  paper.rs  tiles.rs
tests/: test_cases.rs
