[package]
name = "tyler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env", "string"] }
image = { version = "0.24.5", features = ["rgb"] }
num = "0.4.0"